# PrismaCraft

./: CLAUDE.md  CMakeLists.txt  README.md
branches/mono-csharp/: CMakeLists.txt
branches/mono-csharp/src/core/bridge/: NativeBridge.h
branches/mono-csharp/src/scripts/PrismaCraft.Core/: WorldManager.cs
branches/mono-csharp/src/scripts/PrismaCraft.Scripts/: PlayerController.cs
branches/native-cpp/: CMakeLists.txt
branches/native-cpp/src/game/: BlockInteraction.cpp  BlockInteraction.h  GameLoop.cpp  GameLoop.h  InputHandler.cpp  InputHandler.h
branches/native-cpp/src/game/block/: BedrockBlock.h  BlockStates.cpp  Blocks.cpp  CobblestoneBlock.h  DirtBlock.h  GlassBlock.h  GrassBlock.h  GravelBlock.h  LavaBlock.h  LeavesBlock.h  LogBlock.h  OreBlock.h  PlanksBlock.h  SandBlock.h  SpongeBlock.h  StoneBlock.h  WaterBlock.h
branches/native-cpp/src/game/entity/player/: Player.cpp  Player.h  PlayerController.cpp  PlayerController.h
branches/native-cpp/src/game/graphic/: BlockRenderer.cpp  BlockRenderer.h  ChunkMeshComponent.h  ChunkMeshGenerator.cpp  ChunkMeshGenerator.h
branches/native-cpp/src/game/shaders/: block.frag  block.vert
branches/native-cpp/src/game/world/entity/: Entity.h
branches/native-cpp/src/game/world/level/: Level.cpp  Level.h
branches/native-cpp/src/game/world/level/chunk/: ChunkManager.cpp  LevelChunk.cpp  LevelChunk.h
shared/include/PrismaCraft/Core/: Block.h  BlockPos.h  BlockState.h  ChunkPos.h  Registry.h
shared/include/PrismaCraft/NBT/: NBTIO.h  NBTTag.h
src/: main.cpp
